--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="styles/icon" href="../src/images/Frame304.png" type="image/x-icon"/>
+    <link rel="styles/icon" href="../public/Frame 303.svg" type="image/x-icon"/>
     <!-- <link rel="stylesheet" href="https://kit.fontawesome.com/461492173e.css" crossorigin="anonymous"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
